<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="200"
        android:title="@string/add"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_add" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="300"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_email"
        android:orderInCategory="400"
        android:title="@string/email"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_email" />
    <item
        android:id="@+id/action_sms"
        android:orderInCategory="500"
        android:title="@string/sms"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_sms" />

</menu>
