<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

    <item android:title="@string/menu_item_list">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:title="@string/action_settings"
                android:icon="@drawable/ic_action_settings" />
            <item
                android:id="@+id/action_add"
                android:orderInCategory="200"
                android:title="@string/add"
                android:icon="@drawable/ic_action_add" />
            <item
                android:id="@+id/action_delete"
                android:orderInCategory="300"
                android:title="@string/delete"
                android:icon="@drawable/ic_action_delete" />
            <item
                android:id="@+id/action_sms"
                android:orderInCategory="400"
                android:title="@string/sms"
                android:icon="@drawable/ic_action_sms" />
            <item
                android:id="@+id/action_email"
                android:orderInCategory="500"
                android:title="@string/email"
                android:icon="@drawable/ic_action_email" />
        </menu>
    </item>

</menu>
